# check_project

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  alembic.ini  deploy_develop.sh  docker-compose.yml  init.sql  pyproject.toml  pyvenv.cfg  send_slack_message.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_form.yml
.github/workflows/: deploy.yml
alembic/: README.md  env.py
alembic/versions/: 091da39ca9b6_create_user_salary.py  0ada626cb05a_delete_board_post_comment.py  0b20af972bae_create_auto_leave_grant_approval.py  0c413244a742_add_sendmailhistory_and_add_start_at_.py  0dd8a6013dac_v10.py  10dbd85e2eb8_v9.py  125252945859_v7.py  13212fad6c7f_11_01_rds_v10.py  1bb64a706470_v16.py  25fc952e4b37_v19.py  2601c093c87e_create_annual_leave_approval_grant.py  2952d6c7d334_merge_heads.py  2b5df9c1f68f_v20.py  2d6aa8b25a6e_loadl_rds_v2.py  31ee2e33bfad_local2.py  36487ba971c3_initial_migration.py  40a3f387860f_users_personnel_leave_overtime_commute.py  45056817e69a_rds_local_v1.py  480b8807d632_v9.py  52630b762d55_salary_template_reseponse_fix.py  53125b349b1c_message.py  59343331391d_v6.py  5cde4ffe5766_init.py  5dbe36fa0061_salary_template_model_fix.py  5e727b4e9d6e_v18.py  5f4e3fad13bb_rds_통합본.py  68b9932ab102_v12.py  6a569850eb93_local.py  6bdb3d603431_10_28_rds.py  6d602294d5d9_10_28_rds.py  6eb421dd0176_salary.py  7a721b8d7dc8_직원계약_테이블_추가_및_고정_휴일_테이블_추가.py  803f44e21b40_v15.py  81496fbeb00d_10_28_1158.py  85126e30108c_v3.py  860279e01446_10_28.py  86f80abd758c_10_27.py  87465d637550_v12.py  8b423a8bfcd0_update_all_models_including_policies.py  8c82b2e1a98d_v4.py  (+27 more)
app/: README.md  main.py
app/api/: main.py
app/common/: minimum_wage_policies_model.py  modusign.py
app/core/: README.md  config.py  database.py  log_config.py  modusign_config.py
app/dependencies/: modusign.py  user_management.py
app/enums/: branches.py  common.py  modusign.py  parts.py  user_management.py  users.py
app/exceptions/: exceptions.py
app/middleware/: check_admin.py  mailsend.py  permission.py  permission_middleware.py  role_branch_middleware.py  s3_upload.py  tokenVerify.py  token_middleware.py
app/models/: __init__.py  models.py
app/schedulers/: schedulers.py
app/schemas/: branches_schemas.py  callback_schemas.py  hour_wage_template_schemas.py  leave_category_schemas.py  menu_management_schemas.py  modusign_schemas.py  parts_schemas.py  salary_template_schemas.py  sign_schemas.py  user_work_contract_schemas.py  (+3 more)
docker/: README.md  docker-compose.yml
docker_rds_live_server/: docker-compose.yml
nginx/: nginx.conf
tests/: conftest.py  test_example.py
(+257 files in other folders)
