[tool.poetry]
name = "memento-ai"
version = "0.1.0"
description = ""
authors = ["dsad233 <ksl1421@naver.com>"]
readme = "README.md"
packages = [{include = "memento"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
bcrypt = "^4.2.0"
jose = "^1.0.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"
alembic = "^1.13.3"
uvicorn = "^0.31.1"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
asyncmy = "^0.2.9"
greenlet = "^3.1.1"
isort = "^5.13.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
