[tool.poetry]
name = "mementoai-"
version = "0.1.0"
description = ""
authors = ["devdotcor <ksl1421@mement.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
bcrypt = "^4.2.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"
alembic = "^1.13.3"
uvicorn = "^0.31.1"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
asyncmy = "^0.2.9"
greenlet = "^3.1.1"
isort = "^5.13.2"
black = "^24.10.0"
pandas = "^2.2.3"
xlsxwriter = "^3.2.0"
aiologger = "^0.7.0"
boto3 = "^1.35.44"
pycryptodome = "^3.16.0"
aiohttp = "^3.10.10"
reportlab = "^4.2.5"
python-multipart = "^0.0.16"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
