[tool.poetry]
name = "mementoai-"
version = "0.1.0"
description = ""
authors = ["devdotcor <ksl1421@mement.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
bcrypt = "^4.2.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"
alembic = "^1.13.3"
uvicorn = "^0.31.1"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
asyncmy = "^0.2.9"
greenlet = "^3.1.1"
isort = "^5.13.2"
black = "^24.10.0"
pandas = "^2.2.3"
xlsxwriter = "^3.2.0"
aiologger = "^0.7.0"
boto3 = "^1.35.44"
pycryptodome = "^3.16.0"
aiohttp = "^3.10.10"
reportlab = "^4.2.5"
python-multipart = "^0.0.16"
requests = "^2.32.3"
apscheduler = "^3.10.4"
slack-sdk = "^3.33.3"
pytest = "^8.3.3"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
faker = "^30.8.2"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"